tests/paczka1/fuzzy1/89748219.err
Error in line 9: jbI A196 -1,4
Error in line 10: dUzJn A475 -2,7
Error in line 12: IvQbua A196 99,0
Error in line 17: mFSU A475 12,4
Error in line 22: A972 A709 5,5
Error in line 14: IvQbua A475 3,9
Error in line 3: jbI A196 63,5
